# goit-pythonweb-hw-10

./: .gitignore  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0ffdf2a5172d_user_fix.py  59590bd82fb0_add_user.py  bacc0519227a_add_avatar_and_roles.py  f3ce5a24518e_init.py
src/conf/: config.py  constants.py  messages.py
src/core/: depend_service.py
src/entity/: models.py
src/repositories/: base.py  contacts_repo.py  refresh_token_repo.py  users_repo.py
src/routes/: contacts.py
src/routes/v1/: auth_routes.py  contacts.py  users_routes.py
src/schemas/: contacts.py  token.py  user.py
src/services/: auth_service.py  contacts_service.py  email_service.py  user_service.py
